<resources>
    <string name="app_name">NFC Deneme 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_tutorial">Tutorial</string>
    <string name="menu_shop">Shop</string>
    <string name="menu_portfolio">Portfolio</string>
    <string name="menu_term">Terms &amp; Conditions</string>
    <string name="menu_legal_notice">Legal Notice</string>
    <string name="write_a_message">Write a message:</string>
    <string name="message">Write here…</string>
    <string name="write">Write</string>
    <string name="text_home">Click here to open NFC Reader.</string>
</resources>