<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_tutorial"
            android:title="@string/menu_tutorial" />
        <item
            android:id="@+id/nav_shop"
            android:title="@string/menu_shop" />
        <item
            android:id="@+id/nav_portfolio"
            android:title="@string/menu_portfolio" />
        <item
            android:id="@+id/nav_term"
            android:title="@string/menu_term" />
        <item
            android:id="@+id/nav_legal_notice"
            android:title="@string/menu_legal_notice" />
    </group>
</menu>