<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.nfcdeneme3.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.nfcdeneme3.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_tutorial"
        android:name="com.example.nfcdeneme3.ui.tutorial.TutorialFragment"
        android:label="@string/menu_tutorial"
        tools:layout="@layout/fragment_tutorial" />

    <fragment
        android:id="@+id/nav_shop"
        android:name="com.example.nfcdeneme3.ui.shop.ShopFragment"
        android:label="@string/menu_shop"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_portfolio"
        android:name="com.example.nfcdeneme3.ui.shop.ShopFragment"
        android:label="@string/menu_portfolio"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_term"
        android:name="com.example.nfcdeneme3.ui.shop.ShopFragment"
        android:label="@string/menu_term"
        tools:layout="@layout/fragment_shop" />

    <fragment
        android:id="@+id/nav_legal_notice"
        android:name="com.example.nfcdeneme3.ui.shop.ShopFragment"
        android:label="@string/menu_legal_notice"
        tools:layout="@layout/fragment_shop" />
</navigation>