<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NFCWriter">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="409dp"
        android:layout_height="33dp"
        android:paddingStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="0dp"
        android:text="@string/write_a_message"
        app:layout_anchor="@+id/textView2"
        app:layout_anchorGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="309dp"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/text_background"
        android:ems="10"
        android:layout_marginStart="20dp"
        android:inputType="text"
        android:paddingStart="12dp"
        android:hint="@string/message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/write"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nfc_contents"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>